--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -24,7 +24,7 @@ wx-resources.cpp : pc.xrc
 
 # PCem
 pcem_SOURCES = 386.c 386_dynarec.c 386_dynarec_ops.c 808x.c acc2036.c acer386sx.c ali1429.c  amstrad.c cbm_io.c cdrom-image.cc cdrom-null.c \
-cmd640.c codegen.c codegen_ops.c codegen_timing_486.c codegen_timing_686.c codegen_timing_common.c codegen_timing_pentium.c codegen_timing_winchip.c compaq.c config.c cpu.c \
+cmd640.c codegen.c codegen_backend.c codegen_ir.c codegen_timing_486.c codegen_timing_686.c codegen_timing_common.c codegen_timing_pentium.c codegen_timing_winchip.c compaq.c config.c cpu.c \
 dells200.c device.c disc.c disc_fdi.c disc_img.c disc_sector.c dma.c esdi_at.c fdc.c fdc37c665.c fdd.c fdi2raw.c gameport.c \
 hdd.c hdd_esdi.c hdd_file.c headland.c i430lx.c i430fx.c i430vx.c ide.c ide_atapi.c intel.c intel_flash.c io.c jim.c joystick_ch_flightstick_pro.c joystick_standard.c joystick_sw_pad.c \
 joystick_tm_fcs.c keyboard.c keyboard_amstrad.c keyboard_at.c keyboard_olim24.c keyboard_pcjr.c keyboard_xt.c \
@@ -70,12 +70,20 @@ pcem_SOURCES += wx-sdl2-midi.c
 endif
 
 if CPU_I386
-pcem_SOURCES += codegen_x86.c
+pcem_SOURCES += codegen_backend_x86.c codegen_backend_x86_uops.c
 pcem_CFLAGS += -msse2
 endif
 
 if CPU_X86_64
-pcem_SOURCES += codegen_x86-64.c
+pcem_SOURCES += codegen_backend_x86-64.c codegen_backend_x86-64_uops.c
+endif
+
+if CPU_ARM
+pcem_SOURCES += codegen_backend_arm.c codegen_backend_arm_uops.c
+endif
+
+if CPU_ARM64
+pcem_SOURCES += codegen_backend_arm64.c codegen_backend_arm64_uops.c
 endif
 
 if USE_NETWORKING
