Add -fcommon to configure.ac. Should fix building on GCC 10.x.

--- a/configure.ac
+++ b/configure.ac
@@ -27,12 +27,12 @@ AC_MSG_CHECKING([whether to enable debugging])
 AC_ARG_ENABLE(debug,
           AC_HELP_STRING([--enable-debug], [build debug executable]))
 if test "$enable_debug" = "yes"; then
-   CFLAGS="-Wall -O0 -g -D_DEBUG"
-   CXXFLAGS="-Wall -O0 -g -D_DEBUG"
+   CFLAGS="-Wall -O0 -g -D_DEBUG -fcommon"
+   CXXFLAGS="-Wall -O0 -g -D_DEBUG -fcommon"
    AC_MSG_RESULT([yes])
 else
-   CFLAGS="-O3"
-   CXXFLAGS="-O3"
+   CFLAGS="-O3 -fcommon"
+   CXXFLAGS="-O3 -fcommon"
    AC_MSG_RESULT([no])
 fi
 
